create share for two parties, done in a new machine, with a new environment, some usage are different

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.pythonPath": "/home/jingtao1/miniconda3/envs/test_crypten/bin/python"
+    "python.pythonPath": "/home/jingtao1/miniconda3/envs/test_crypten/bin/python",
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#5F0717",
+        "titleBar.activeBackground": "#850A21",
+        "titleBar.activeForeground": "#FFFBFC"
+    }
 }
