--- a/env/environment.yml
+++ b/env/environment.yml
@@ -1,5 +1,7 @@
 name: test_crypten
 channels:
+  - seemethere
+  - soumith
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -69,6 +71,7 @@ dependencies:
   - ncurses=6.2=he6710b0_1
   - nest-asyncio=1.5.1=pyhd3eb1b0_0
   - notebook=6.2.0=py38h06a4308_0
+  - numpy=1.19.2=py38h54aff64_0
   - numpy-base=1.19.2=py38hfa32c7d_0
   - olefile=0.46=py_0
   - openssl=1.1.1k=h27cfd23_0
@@ -79,6 +82,7 @@ dependencies:
   - pcre=8.44=he6710b0_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=8.2.0=py38he98fc37_0
   - pip=21.0.1=py38h06a4308_0
   - prometheus_client=0.9.0=pyhd3eb1b0_0
   - prompt-toolkit=3.0.8=py_0
@@ -90,6 +94,7 @@ dependencies:
   - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.17.3=py38h7b6447c_0
   - python=3.8.5=h7579374_1
+  - python-dateutil=2.8.1=pyhd3eb1b0_0
   - pyzmq=20.0.0=py38h2531618_1
   - qt=5.9.7=h5867ecd_1
   - qtconsole=5.0.2=pyhd3eb1b0_0
@@ -98,6 +103,7 @@ dependencies:
   - send2trash=1.5.0=pyhd3eb1b0_1
   - setuptools=52.0.0=py38h06a4308_0
   - sip=4.19.13=py38he6710b0_0
+  - six=1.15.0=py38h06a4308_0
   - sqlite=3.33.0=h62c20be_0
   - terminado=0.9.2=py38h06a4308_0
   - testpath=0.4.4=pyhd3eb1b0_0
@@ -106,6 +112,7 @@ dependencies:
   - traitlets=5.0.5=pyhd3eb1b0_0
   - wcwidth=0.2.5=py_0
   - webencodings=0.5.1=py38_1
+  - wheel=0.36.2=pyhd3eb1b0_0
   - widgetsnbextension=3.5.1=py38_0
   - xz=5.2.5=h7b6447c_0
   - zeromq=4.3.3=he6710b0_3
@@ -113,55 +120,33 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.9=haebb681_0
   - pip:
-    - absl-py==0.11.0
-    - bcrypt==3.2.0
-    - boto3==1.17.15
-    - botocore==1.20.15
+    - absl-py==0.12.0
     - cachetools==4.2.1
     - chardet==4.0.0
-    - crypten==0.1.0
-    - cryptography==3.4.6
-    - cython==0.29.22
+    - crypten==0.1
     - future==0.18.2
-    - google-auth==1.27.0
-    - google-auth-oauthlib==0.4.2
-    - grpcio==1.36.0rc1
+    - google-auth==1.28.0
+    - google-auth-oauthlib==0.4.4
+    - grpcio==1.36.1
     - idna==2.10
-    - jmespath==0.10.0
     - joblib==1.0.1
-    - jsonpatch==1.28
-    - jsonpointer==2.0
     - markdown==3.3.4
-    - numpy==1.20.1
     - oauthlib==3.1.0
     - onnx==1.8.1
-    - pandas==1.2.2
-    - paramiko==2.7.2
-    - pillow==8.1.0
-    - protobuf==4.0.0rc2
+    - protobuf==3.15.7
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
-    - pyfhel==2.3.1
-    - pynacl==1.4.0
-    - python-dateutil==2.8.1
-    - pytz==2021.1
     - requests==2.25.1
     - requests-oauthlib==1.3.0
     - rsa==4.7.2
-    - s3transfer==0.3.4
     - scikit-learn==0.24.1
-    - scipy==1.6.1
-    - six==1.15.0
+    - scipy==1.6.2
     - tensorboard==2.4.1
     - tensorboard-plugin-wit==1.8.0
     - threadpoolctl==2.1.0
-    - torch==1.7.1
-    - torchfile==0.1.0
-    - torchvision==0.8.2
+    - torch==1.4.0
+    - torchvision==0.5.0
     - typing-extensions==3.7.4.3
-    - urllib3==1.26.3
-    - visdom==0.1.8.9
-    - websocket-client==0.57.0
-    - werkzeug==2.0.0rc1
-    - wheel==0.36.2
+    - urllib3==1.26.4
+    - werkzeug==1.0.1
 prefix: /home/jingtao1/miniconda3/envs/test_crypten
