--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,20 @@
 {
-    "python.pythonPath": "/home/jingtao1/miniconda3/envs/test_crypten/bin/python",
+    "python.pythonPath": "/home/jingtao1/miniconda3/envs/crypten/bin/python",
     "workbench.colorCustomizations": {
-        "activityBar.background": "#5F0717",
-        "titleBar.activeBackground": "#850A21",
-        "titleBar.activeForeground": "#FFFBFC"
-    }
+        "activityBar.background": "#5e0818",
+        "titleBar.activeBackground": "#2f040c",
+        "titleBar.activeForeground": "#e7e7e7",
+        "activityBar.activeBackground": "#5e0818",
+        "activityBar.activeBorder": "#1e750a",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#1e750a",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "statusBar.background": "#2f040c",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#5e0818",
+        "titleBar.inactiveBackground": "#2f040c99",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.remoteColor": "#2f040c"
 }
